file org and minor changes

--- a/HTML/homePage.html
+++ b/HTML/homePage.html
@@ -1,11 +1,11 @@
 <html>
 <head>
     <title>Home Page</title>
-    <link rel="stylesheet" href="navBar.css" />
-    <link rel="stylesheet" href="homeStyle.css" />
-    <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="../CSS/navBar.css" />
+    <link rel="stylesheet" href="../CSS/homeStyle.css" />
+    <link rel="stylesheet" href="../CSS/footer.css" />
     <header class="header-navbar">
-        <img src="Media/uhLogo.png" class="navbar-logo">
+        <img src="../Images/uhLogo.png" class="navbar-logo">
         <nav class="navbar">
             <div class="navbar-item dropdown">
                 <span class="dropbtn">About</span>
@@ -32,13 +32,12 @@
         <p class="titleCaption">Nourishing minds <br> Fueling futures</p>
     </div>
     <div class="separator-container">
-        <img src="../cis-2336-assignment-1-kristiechen41/Media/homePGfood.png" class="separator-image">
+        <img src="../Images/homePGfood.png" class="separator-image">
     </div>
     <div class="content-area">
         <div class="video-container">
             <video width="560" height="315" controls>
-              <source src="../cis-2336-assignment-1-kristiechen41/Media/hpVid.mp4" type="video/mp4">
-              Your browser does not support the video tag.
+              <source src="../Images/hpVid.mp4" type="video/mp4">
             </video>
           </div>
         <div class="text-area">
@@ -50,13 +49,13 @@
 <footer class="social-media-footer">
     <div class="footer-content">
         <a href="https://www.facebook.com/uhfoodie" target="_blank">
-            <img src="../cis-2336-assignment-1-kristiechen41/Media/fbook.png" alt="Facebook">
+            <img src="../Images/fbook.png" alt="Facebook">
         </a>
         <a href="https://www.instagram.com/uhfoodie" target="_blank">
-            <img src="../cis-2336-assignment-1-kristiechen41/Media/inst.png" alt="Instagram">
+            <img src="../Images/inst.png" alt="Instagram">
         </a>
         <a href="https://www.youtube.com/channel/UCTaXYrG1m00C2dBrMN083Mw" target="_blank">
-            <img src="../cis-2336-assignment-1-kristiechen41/Media/ytb.png" alt="Youtube">
+            <img src="../Images/ytb.png" alt="Youtube">
         </a>
     </div>
 </footer>
