--- a/HTML/BioPage.html
+++ b/HTML/BioPage.html
@@ -74,7 +74,7 @@
             <a href="homePage.html" class="button">Continue to Site</a>
         </div>
         <div class="bio-image">
-            <img src="../cis-2336-assignment-1-kristiechen41/Media/bioPic.jpeg">
+            <img src="../Images/bioPic.jpeg">
           </div>
     </div>
 </body>
