combined nav and footer css

--- a/HTML/homePage.html
+++ b/HTML/homePage.html
@@ -1,9 +1,8 @@
 <html>
 <head>
     <title>Home Page</title>
-    <link rel="stylesheet" href="../CSS/navBar.css" />
+    <link rel="stylesheet" href="../CSS/navFooter.css" />
     <link rel="stylesheet" href="../CSS/homeStyle.css" />
-    <link rel="stylesheet" href="../CSS/footer.css" />
     <header class="header-navbar">
         <img src="../Images/uhLogo.png" class="navbar-logo">
         <nav class="navbar">
